# mem-walker

./: .gitignore  AGENT.md  AGENTS.md  AI系统架构审查员Prompt模板.md  AI系统架构审查员Prompt模板_v2.0.md  AI系统架构审查员Prompt模板_自迭代版.md  design_第一版.md  plan_第一版.md  prompt模板_第一版.md  task_第一版.md  使用手册.md  技术评估报告_本地文件记忆能力扩展方案.md  系统设计文档_第一版.md
service/: PHASE1_SETUP.md  PHASE1_SUMMARY.md  README.md  debug_hf.py  download_reranker.py  pyproject.toml
service/examples/: advanced_usage.py  quickstart.py  test_deepseek.py  verify_chinese_examples.py  verify_memory_system.py
service/mnemosyne/: __init__.py  exceptions.py
service/mnemosyne/adapter/: __init__.py  config.py  main.py
service/mnemosyne/configs/: __init__.py  local_storage.py  settings.py
service/mnemosyne/embeddings/: __init__.py  base.py  cached.py  configs.py  fastembed.py  huggingface.py  openai.py
service/mnemosyne/examples/: benchmark_search.py  debug_milvus.py  profile_kb_demo.py  verify_architecture.py
service/mnemosyne/graphs/: __init__.py  base.py  configs.py  neo4j.py
service/mnemosyne/llms/: __init__.py  base.py  configs.py  local_slm.py  openai.py  simple_local_llm.py
service/mnemosyne/memory/: __init__.py  base.py  main.py  search.py  storage.py  utils.py
service/mnemosyne/reranker/: __init__.py  base.py  bm25.py  configs.py  cross_encoder.py
service/mnemosyne/utils/: __init__.py  logging.py
service/mnemosyne/vector_stores/: __init__.py  base.py  configs.py  (+3 more)
service/tests/: test_bm25_reranker.py  test_embeddings_integration.py  test_file_memory_context.py  test_milvus_connection.py  test_reranker_integration.py  test_sqlite_vector_store.py
(+128 files in other folders)
