[tool.poetry]
name = "mnemosyne"
version = "0.1.0"
description = "Holographic Cognitive Memory System for AI Applications"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.10"
# Core dependencies
pydantic = "^2.0.0"
# Embedding providers
openai = "^1.0.0"
# Vector stores
pymilvus = "^2.3.0"
# Graph stores
neo4j = "^5.14.0"
# LLM & NLP
rank-bm25 = "^0.2.2"
# Utilities
python-dotenv = "^1.0.0"

[project.optional-dependencies]
adapter = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.26.0",
    "structlog>=24.1.0",
    "aiosqlite>=0.19.0",
]

[tool.poetry.group.dev.dependencies]
# Testing
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.11.0"
# Code quality
black = "^23.9.0"
ruff = "^0.0.292"
mypy = "^1.5.0"
# Documentation
mkdocs = "^1.5.0"
mkdocs-material = "^9.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=mnemosyne --cov-report=html --cov-report=term"
